--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,16 @@
+
 logging:
   level:
     com.mvc.ethereum: DEBUG
 
 org.ethereum:
-    address: http://192.168.206.229:8545
+#    address: http://192.168.206.229:8545
+    address: http://127.0.0.1:8545
 #    address: http://ethereum.yope.io
 
 com.mvc:
     centralAddress:
     registrationTip: 10000
     password: mvc123$%^
+server:
+  port: 8081
