--- a/pom.xml
+++ b/pom.xml
@@ -116,10 +116,11 @@
             <version>3.2.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.web3j/quorum -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>1.0.2.RELEASE</version>
+            <groupId>org.web3j</groupId>
+            <artifactId>quorum</artifactId>
+            <version>0.8.0</version>
         </dependency>
 
         <dependency>
@@ -136,6 +137,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.3.2.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -178,6 +180,15 @@
             <groupId>com.cegeka</groupId>
             <artifactId>tetherj</artifactId>
         </dependency>
+
+
+        <!-- Swagger -->
+        <dependency>
+            <groupId>com.spring4all</groupId>
+            <artifactId>spring-boot-starter-swagger</artifactId>
+            <version>1.5.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
