--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
                 <artifactId>tetherj</artifactId>
                 <version>1.0.11</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -176,11 +177,10 @@
             <version>3.4</version>
         </dependency>
         <dependency>
-            <groupId>com.cegeka</groupId>
-            <artifactId>tetherj</artifactId>
+            <groupId>com.mvc</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
-
-
         <!-- Swagger -->
         <dependency>
             <groupId>com.spring4all</groupId>
@@ -188,6 +188,12 @@
             <version>1.5.1.RELEASE</version>
         </dependency>
 
+        <!--bcc-->
+        <dependency>
+            <groupId>org.bitcoincashj</groupId>
+            <artifactId>bitcoincashj</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <profiles>
