Completed BTC balance and tx retrieving.

--- a/src/main/resources/application-template.yml
+++ b/src/main/resources/application-template.yml
@@ -44,6 +44,10 @@ mvc:
       test: '\opt\bitblock\bitcoincashj-blocks\'
       prod: '\opt\bitblock\bitcoincashj-blocks\'
   pass:
+    btc:
+      local: 123456
+      test: 123456
+      prod: 123456
     bch:
       local: 123456
       test: 123456
