--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,12 @@
             <artifactId>bitcoincashj</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.bitcoinj</groupId>
+            <artifactId>bitcoinj-core</artifactId>
+            <version>0.14.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
